--- a/1_Symboles_Formatting_quotation.html
+++ b/1_Symboles_Formatting_quotation.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="1_Symboles_Formatting_quotation.html">Symboles & Formatting & quotation</a>
+    <a href="2_file_path.html">File Path</a>
+    <a href="Folder1/Folder2/2_file_path.html">File Path (2)</a>
+    <a href="3_Image.html">Image</a>
+    <a href="4_hyperlinks.html">Hyper Links</a>
+    <hr>
+    
     <!--
       Symbole
         &#decimal-number;
