--- a/Folder1/Folder2/2_file_path.html
+++ b/Folder1/Folder2/2_file_path.html
@@ -7,7 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <a href="1_Symboles_Formatting_quotation.html">Symboles & Formatting & quotation</a>
+    <a href="2_file_path.html">File Path</a>
+    <a href="Folder1/Folder2/2_file_path.html">File Path (2)</a>
+    <a href="3_Image.html">Image</a>
+    <a href="4_hyperlinks.html">Hyper Links</a>
+    <hr>
     <h2>Absolute File Paths</h2>
     <img
       src="https://mftcdn.ir/files/lessonimages/a6th3Ii5hCiYa5Pv.png"
