--- a/3_Image.html
+++ b/3_Image.html
@@ -7,7 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <a href="/">Home</a>
+    <a href="/1_Symboles_Formatting_quotation.html">Symboles & Formatting & quotation</a>
+    <a href="/2_file_path.html">File Path</a>
+    <a href="/Folder1/Folder2/2_file_path.html">File Path (2)</a>
+    <a href="/3_Image.html">Image</a>
+    <a href="/4_hyperlinks.html">Hyper Links</a>
+    <hr />
     <!-- 
       <img src="url" alt="text" /> 
     -->
@@ -15,16 +21,8 @@
     <img src="images/iconfinder__cabin_1679607.svg" alt="Home" />
     <img src="images/iconfinder_38_62695.png" alt="Home" />
     <hr />
-    <img
-      src="images/front-page-project-1.jpg"
-      alt="Front page Project 1"
-      width="238"
-    />
-    <img
-      src="images/front-page-project-1.jpg"
-      alt="Front page Project 1"
-      height="238"
-    />
+    <img src="images/front-page-project-1.jpg" alt="Front page Project 1" width="238" />
+    <img src="images/front-page-project-1.jpg" alt="Front page Project 1" height="238" />
     <img
       src="images/front-page-project-1.jpg"
       alt="Front page Project 1"
