--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <title>Session 3</title>
 </head>
 <body>
-  <a href="1_Symboles_Formatting_quotation.html">Symboles & Formatting & quotation</a>
-  <a href="2_file_path.html">File Path</a>
-  <a href="Folder1/Folder2/2_file_path.html">File Path (2)</a>
-  <a href="3_Image.html">Image</a>
-  <a href="4_hyperlinks.html">Hyper Links</a>
+  <a href="/">Home</a>
+  <a href="/1_Symboles_Formatting_quotation.html">Symboles & Formatting & quotation</a>
+  <a href="/2_file_path.html">File Path</a>
+  <a href="/Folder1/Folder2/2_file_path.html">File Path (2)</a>
+  <a href="/3_Image.html">Image</a>
+  <a href="/4_hyperlinks.html">Hyper Links</a>
   <hr>
+  <h1>Session 3</h1>
+  
 </body>
 </html>
